# forge-workbench

./: .gitattributes  .gitignore  README.md  pyproject.toml
tools/: forge_kernel_compare.py  triage_gap.py
workbench/: __init__.py  __main__.py  cli.py
workbench/probe/: AUTOMATION_BACKLOG.md  __init__.py  coverage.py  db.py  generator.py  miner.py  runner.py  scheduler.py  surface.py
workbench/probe/hooks/: post-commit  pre-commit
workbench/probe/kernel_corpus/: atomic_shared.ptx  blake2_g_round.ptx  carry_chain_128.ptx  div_rem_u64.ptx  fma_chain_8.ptx  lop3_mix.ptx  m31_ntt_butterfly.ptx  mont_step.ptx  shfl_butterfly.ptx
workbench/probe/wrappers/: dispatch_via_claude.sh  git_sync.sh  gpu_throttle.ps1  gpu_throttle.sh  mower-gitsync.service  mower-soak.service  mower-throttle.service  soak_respawn.cmd  soak_respawn.sh  soak_supervisor.ps1  soak_supervisor.sh
